--- a/client/template.html
+++ b/client/template.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Webpack App</title>
+    <title>个人社区</title>
   </head>
   <body>
       <div id="root">
